--- a/menus/css/trivia.css
+++ b/menus/css/trivia.css
@@ -80,10 +80,23 @@
     height: 60px;
     margin: 0;
     cursor: pointer;
+
+    position: relative;
 }
 
 .btnAnswer:hover {
     background-color: var(--crush40-red-pale-hover);
+}
+
+.btnAnswer .orderVal {
+    position: absolute;
+    top: 6px;
+    right: 20px;
+    font-size: 110%;
+
+    border: solid 2px white;
+    padding: 0 3px;
+    border-radius: 50%;
 }
 
 .selectedBtnAnswer {
@@ -99,10 +112,28 @@
 .answerC { grid-area: c; }
 .answerD { grid-area: d; }
 
-.quizSubmit
+.nextBtns {
+    display: flex;
+    flex-direction: column; /* Smallscreen */
+}
+
+@media (min-width: 1000px)
 {
+    .nextBtns {
+        flex-direction: row;
+    }   
+}
+
+.quizSubmit {
     grid-area: submit;
     width: 100%;
+}
+
+.clickToEnlarge {
+    font-style: italic;
+    text-align: left;
+    font-size: 120%;
+    margin: 0;
 }
 
 /* Results Screen */
@@ -112,7 +143,7 @@
     align-items: stretch;
     text-align: center;
 
-    width: 50%;
+    width: 80%;
 }
 
 .resultsScreen .results {
@@ -141,7 +172,42 @@
     top: 0;
     width: 40%;
     height: 100%;
-    background-color: green;
+    background-color: var(--crush40-blue-pale-transparent);
+}
+
+.resultsScreen .questions {
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    text-align: left;
+    font-size: 115%;
+
+    overflow-x: auto;
+    margin-bottom: 10px;
+}
+
+@media (min-width: 1000px)
+{
+    .resultsScreen .questions {
+        flex-direction: row;
+        gap: 40px;
+    }   
+}
+
+.resultsScreen .questions li {
+    flex-shrink: 0;
+}
+
+.resultsScreen .questions p {
+    margin: 5px 0;
+}
+
+.resultsScreen .questions .correct {
+    color: var(--crush40-blue);
+}
+
+.resultsScreen .questions .incorrect {
+    color: var(--crush40-red);
 }
 
 .hidden {
