--- a/css/home.css
+++ b/css/home.css
@@ -486,9 +486,6 @@
 }
 
 .trivia {
-    background-image: url('../img/visuals/Background/Vector/Jun3.svg');
-    background-position: right;
-    background-repeat: no-repeat;
     margin-top: -120px;
 }
 
@@ -502,9 +499,14 @@
 .trivia {
     padding-top: 160px;
     height: 300px;
-    background-color: white;
     text-align: center;
-    color: black;
+    color: white;
+
+    background-color: black;
+    background-image: url('../img/visuals/Background/Vector/Jun4.svg');
+    background-position: right;
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 
 .trivia h2 {
