--- a/menus/css/guitarView.css
+++ b/menus/css/guitarView.css
@@ -1,5 +1,5 @@
 body {
-    --separator-color: rgb(40, 40, 40);
+    --separator-color: black;
     background-color: var(--separator-color);
 
     display: grid;
