--- a/css/site.css
+++ b/css/site.css
@@ -1,3 +1,16 @@
+@import url('shared/general-formatting.css');
+@import url('shared/strips.css');
+@import url('shared/colors.css');
+@import url('shared/buttons.css');
+@import url('shared/lists.css');
+@import url('shared/site-background.css');
+@import url('shared/loading-screen.css');
+@import url('shared/panel.css');
+@import url('shared/zoom-panel.css');
+@import url('shared/navbar.css');
+@import url('shared/opening.css');
+@import url('shared/footer.css');
+
 /* If you see this, you should REALLY come chat with us over on the Discord server! */
 @font-face {
     font-family: 'Bahnschrift';
@@ -8,694 +21,4 @@
     font-family: 'Dimentia';
     font-weight: 300;
     src: url('../img/fonts/Dimentia.otf');
-}
-
-/* GENERAL: */
-html, body {
-    --crush40-red: rgb(235, 0, 5);
-    --crush40-red-hover: rgb(205, 0, 5);
-    --crush40-blue: rgb(120, 120, 255);
-
-    --crush40-darkred: rgb(195, 0, 5);
-    --crush40-lightred-hover: rgb(109, 0, 0);
-
-    --crush40-red-pale: rgb(140, 30, 30);
-    --crush40-red-pale-transparent: rgba(140, 30, 30, 0.8);
-    --crush40-red-pale-hover: rgb(160, 30, 30);
-    --crush40-blue-pale: rgb(30, 30, 140);
-    --crush40-blue-pale-transparent: rgba(30, 30, 140, 0.8);
-    --crush40-blue-pale-hover: rgb(60, 30, 140);
-
-    --crush40-gray: rgb(24, 26, 27);
-    --crush40-darkgray: rgb(20, 20, 20);
-
-    margin: 0;
-    position: absolute;
-    z-index: -2;
-    width: 100%;
-    height: 100%;
-
-    color: white;
-
-    font-family: 'Bahnschrift', sans-serif;
-
-    scroll-behavior: smooth;
-}
-
-h1, h2, h3, h4, h5, h6 {
-    font-family: 'Bahnschrift', sans-serif;
-    font-weight: 700;
-}
-
-a {
-    color: var(--crush40-red);
-    text-decoration: underline;
-    cursor: pointer;
-}
-
-._anim {
-    animation-play-state: running !important;
-}
-
-.dimentiaTitle {
-    font-family: 'Dimentia';
-    font-weight: 300;
-    color: red;
-}
-
-.section {
-    width: 100%;
-    overflow: hidden;
-}
-
-.emptyButton, .filledButton {
-    text-align: center;
-    font-size: 125%;
-    border-radius: 10px;
-    color: inherit;
-
-    transition: background-color 0.25s;
-
-    cursor: pointer;
-
-    position: relative;
-
-    margin-bottom: 5px;
-
-    /* Smallscreen: */
-    width: 100%;
-    height: 60px;
-}
-
-.iconButton {
-    margin: 0;
-    padding: 20px;
-
-    background-color: transparent;
-    cursor: pointer;
-    border: none;
-}
-
-.btnSet {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-}
-
-@media (min-width: 580px) {
-    .btnSet {
-        width: auto;
-        flex-direction: row;
-    }
-
-    .btnWidthNormal {
-        width: 285px;
-    }
-
-    .btnWidthWide {
-        width: 400px;
-    }
-
-    button {
-        height: 60px;
-        margin-right: 5px;
-    }
-}
-
-.emptyButton {
-    border: solid 4px var(--crush40-red);
-    background-color: transparent;
-}
-
-.emptyButton:hover {
-    background-color: rgba(0, 0, 0, 0.6);
-}
-
-.filledButton {
-    border: none;
-    background-color: var(--crush40-red);
-}
-
-.filledButton:hover {
-    background-color: var(--crush40-red-hover);
-}
-
-.btnLink {
-    color: white;
-    font-style: normal;
-}
-
-.generalList {
-    list-style-type: none;
-    padding: 0 0 0 10px;
-    margin: 0;
-
-    display: flex;
-}
-
-.generalList > li {
-    text-align: left;
-
-    box-sizing: border-box;
-    padding: 10px 20px;
-    border: 2px solid white;
-    background-color: var(--crush40-red-pale-transparent);
-    margin-bottom: 10px;
-    margin-right: 10px;
-
-    display: flex;
-    flex-direction: column;
-
-    min-width: 300px;
-
-    color: white;
-    cursor: pointer;
-}
-
-.generalList > li:hover {
-    background-color: var(--crush40-red-pale-hover);
-}
-
-.tabLikeList > li:hover {
-    background-image: url('../img/icons/thiccRightArrow.svg');
-    background-position: right;
-    background-repeat: no-repeat;
-}
-
-.tabSet {
-    display: flex;
-    flex-direction: row;
-    list-style-type: none;
-    padding: 0;
-    width: 100%;
-}
-
-.tabSet .tab {
-    margin: 10px;
-    width: 100%;
-
-    display: flex;
-    align-content: center;
-    justify-content: center;
-
-    border-bottom: solid var(--crush40-red) 5px;
-    cursor: pointer;
-}
-
-.tabSet .tab p {
-    margin: 5px;
-}
-
-.tabSet .tab:hover {
-    background-color: rgba(255, 255, 255, 0.2);
-}
-
-.strip {
-    position: relative;
-    width: calc(100% + 20px);
-    box-sizing: border-box;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-    z-index: 1;
-
-    font-size: 150%;
-}
-
-.stripUp {
-    padding-left: 20px;
-    transform: rotateZ(-6deg);
-}
-
-.stripDown {
-    padding-right: 50px;
-    transform: rotateZ(6deg);
-}
-
-.strip .stripText {
-    width: 80%;
-}
-
-.strip .stripImg {
-    width: 80%;
-}
-
-@media (min-width: 800px) {
-    .stripUp {
-        padding-left: 50px;
-    }
-    .strip {
-        margin-bottom: 20px;
-        margin-top: 10px;
-        font-size: 160%;
-        flex-direction: row;
-    }
-
-    .strip .stripImg {
-        width: 30%;
-    }
-}
-
-.stripBack {
-    padding: 10px;
-    margin-left: -100px;
-
-    z-index: -1;
-    position: absolute;
-    width: 150%;
-    height: 100%;
-}
-
-.GSBackContainer {
-    background-color: black;
-
-    position: absolute;
-    z-index: -1;
-    width: 100%;
-    height: 100%;
-}
-
-.GSBack {
-    opacity: 50%;
-
-    background-position: 0% 0px;
-    background-size: cover;
-    background-repeat: no-repeat;
-
-    width: 100%;
-    height: 100%;
-}
-
-.floating {
-    position: fixed;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 101;
-
-    visibility: collapse;
-}
-
-.floating .floatingClose {
-    background-color: rgba(0, 0, 0, 0.3);
-    height: 100%;
-}
-
-.floating .panel {
-
-    z-index: 102;
-
-    position: absolute;
-    background-color: var(--crush40-gray);
-    width: 100%;
-    height: 400px;
-    bottom: 0;
-
-    box-shadow: 0 -2px 1px rgba(0, 0, 0, 0.2);
-
-    display: grid;
-    grid-template-rows: auto 1fr;
-    grid-template-areas:
-        "titlebar"
-        "cont";
-}
-
-.floating .panel .contents {
-    grid-area: cont;
-
-    width: 100%;
-    height: 100%;
-    border: none;
-}
-
-.floating .panel .page {
-    width: 100%;
-    height: 100%;
-}
-
-.floating .panel .titlebar {
-    grid-area: titlebar;
-    color: black;
-
-    padding: 0;
-    background-color: var(--crush40-red);
-
-    display: grid;
-    grid-template-columns: auto 1fr auto;
-    grid-template-areas: "back title close";
-}
-
-.floating .panel .titlebar .title {
-    font-weight: 700;
-    font-size: 125%;
-    margin: 0;
-    padding: 20px;
-}
-
-.floating .panel .titlebar .back {
-    grid-area: back;
-}
-
-.floating .panel .titlebar .close {
-    grid-area: close;
-}
-
-.floating .panel .titlebar .hiddenBack {
-    position: absolute;
-    visibility: collapse;
-}
-
-.floating .panel .titlebar .iconButton {
-    height: 64px;
-}
-
-.floating .panel .titlebar .close:hover, .floating .panel .titlebar .back:hover {
-    background-color: rgba(0, 0, 0, 0.2);
-}
-
-/* ZOOM */
-.zoom {
-    background-color: rgba(0, 0, 0, 0.5);
-    z-index: 200;
-
-    position: fixed;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    visibility: hidden;
-}
-
-.zoom img {
-    max-width: 90%;
-    max-height: 90%;
-}
-
-[data-action='zoom'] {
-    cursor: pointer;
-}
-
-/* NAVBAR */
-.nav {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    height: 80px;
-    background-color: rgb(0, 0, 0, 0.4);
-    z-index: 100;
-
-    display: grid;
-    grid-template-rows: auto;
-    grid-template-columns: auto 1fr;
-    grid-template-areas: "logo items";
-
-    justify-items: flex-end;
-}
-
-.nav .logo {
-    margin: 10px;
-    height: 60px;
-}
-
-.nav .items {
-    grid-area: items;
-    
-    display: flex;
-    flex-direction: row;
-    list-style-type: none;
-    color: black;
-    
-    margin: 0;
-    padding: 0;
-    margin-right: 15px;
-    box-sizing: border-box;
-
-    align-self: center;
-}
-
-.nav .items li {
-    display: block;
-    margin: 10px;
-
-    width: 110px;
-    text-align: center;
-
-    cursor: pointer;
-
-    position: relative;
-}
-
-.nav .items li:hover .back {
-    background-color: var(--crush40-red-hover);
-}
-
-.nav .items .selected .back {
-    background-color: var(--crush40-darkred);
-}
-
-.nav .items li .back {
-    background-color: var(--crush40-red);
-    transform: skew(-25deg);
-
-    position: absolute;
-    margin-top: 5px;
-    width: 110px;
-    height: 40px;
-
-    z-index: -1;
-}
-
-.nav .items li a {
-    text-decoration: none;
-    color: black;
-
-    margin: 0;
-
-    position: absolute;
-    left: 0;
-    width: 100%;
-    height: 100%;
-}
-
-.nav .btn {
-    /* Button for mobile only */
-    visibility: collapse;
-
-    background-color: transparent;
-    border: none;
-}
-
-/* Smallscreen Nav */
-@media (max-width: 1040px) {
-
-    .nav {
-        align-items: flex-start;
-        justify-items: center;
-        
-        grid-template-rows: auto 1fr;
-        grid-template-columns: auto;
-        grid-template-areas:
-            "logo"
-            "items";
-    }
-
-    .navOpen {
-        height: 100%;
-        background-color: rgb(0, 0, 0, 0.8);
-    }
-
-    .nav .img {
-        justify-self: center;
-    }
-
-    .nav .btn {
-        visibility: visible;
-
-        margin-left: 10px;
-        margin-right: 10px;       
-
-        width: 36px;
-        height: 36px;
-        border: 2px solid white;
-        border-radius: 100%;
-
-        cursor: pointer;
-    }
-
-    .nav .btn:hover {
-        background-color: rgba(255, 255, 255, 0.2);
-    }
-
-    .nav .other {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-    }
-
-    .nav .items {
-        visibility: collapse;
-
-        align-self: flex-start;
-        flex-direction: row;
-        flex-wrap: wrap;
-        margin-right: 0;
-
-        width: 300px;
-    }
-
-    .navOpen .items {
-        visibility: visible;   
-    }
-
-    .nav .items li {
-        width: 300px;
-        height: 50px;
-
-        line-height: 30px;
-
-        margin: 0;
-        margin-bottom: 15px;
-        align-items: flex-start;
-    }
-
-    .nav .items li .back {
-        width: 300px;
-        height: 50px;
-
-        border-radius: 10px;
-        transform: none;
-    }
-}
-
-/* LOADING */
-.loading-screen {
-    visibility: collapse;
-
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    background-color: var(--crush40-gray);
-}
-
-.loading-screen .spinning {
-    width: 24px;
-    height: 24px;
-    border-radius: 50%;
-    border: solid transparent 4px;
-    border-top: solid white 4px;
-
-    margin-left: 10px;
-}
-
-.loading-screen p {
-    font-size: 150%;
-}
-
-/* OPENING */
-.opening {
-    display: grid;
-    justify-content: center;
-    align-content: center;
-    
-    height: calc(100% - 200px);
-    min-height: 600px;
-
-    color: white;
-}
-
-.opening img {
-    max-width: 100%;
-}
-
-.opening-intro
-{
-    text-align: center;
-    width: 100%;
-
-    display: flex;
-    flex-direction: column;
-
-    align-items: center;
-    justify-items: center;
-
-    box-sizing: border-box;
-    padding: 10px;
-    margin: 0;
-
-    max-width: 600px;
-}
-
-@keyframes animOpeningLogo {
-    0% { transform: scale(300%); opacity: 0; }
-    100% { transform: scale(100%); opacity: 1; }
-}
-
-@keyframes animOpeningText {
-    0% { opacity: 0; }
-    100% { opacity: 1; }
-}
-
-@keyframes animOpeningBtns {
-    0% { opacity: 0; }
-    100% { opacity: 1; }
-}
-
-.opening img { animation: animOpeningLogo 0.5s 0.1s backwards ease-in-out; }
-.opening h2 { animation: animOpeningText 0.5s 0.5s backwards ease-in-out; }
-.opening .btnSet { animation: animOpeningBtns 0.5s 0.5s backwards ease-in-out; }
-
-/* FOOTER */
-.footer {
-    background-color: var(--crush40-red-pale);
-    padding: 10px;
-    box-sizing: border-box;
-    cursor: pointer;
-
-    display: grid;
-    grid-template-rows: auto 1fr;
-    grid-template-columns: 100%;
-    grid-template-areas: 
-        "img"
-        "txt";
-    
-    align-items: center;
-    justify-items: center;
-}
-
-@media (min-width: 1000px) {
-    .footer {
-        grid-template-rows: auto;
-        grid-template-columns: 300px 1fr;
-        grid-template-areas: "img txt";
-    }
-}
-
-.footer:hover {
-    background-color: var(--crush40-red-pale-hover);
-}
-
-.footer .image {
-    grid-area: img;
-    width: 300px;
-}
-
-.footer .text {
-    grid-area: txt;
-    font-size: 150%;
-    margin-left: 20px;
 }
