--- a/css/shared/colors.css
+++ b/css/shared/colors.css
@@ -1,4 +1,4 @@
-html, body {
+html {
     --crush40-red: rgb(235, 0, 5);
     --crush40-red-hover: rgb(205, 0, 5);
     --crush40-blue: rgb(120, 120, 255);
