--- a/components/menupanel/style.css
+++ b/components/menupanel/style.css
@@ -1,5 +1,5 @@
 
-.floating {
+._comp_menupanel {
     position: fixed;
     left: 0;
     top: 0;
@@ -10,12 +10,12 @@
     visibility: collapse;
 }
 
-.floating .floatingClose {
+._comp_menupanel .panelClose {
     background-color: rgba(0, 0, 0, 0.3);
     height: 100%;
 }
 
-.floating .panel {
+._comp_menupanel .panel {
 
     z-index: 102;
 
@@ -34,7 +34,7 @@
         "cont";
 }
 
-.floating .panel .contents {
+._comp_menupanel .panel .contents {
     grid-area: cont;
 
     width: 100%;
@@ -42,12 +42,12 @@
     border: none;
 }
 
-.floating .panel .page {
+._comp_menupanel .panel .page {
     width: 100%;
     height: 100%;
 }
 
-.floating .panel .titlebar {
+._comp_menupanel .panel .titlebar {
     grid-area: titlebar;
     color: black;
 
@@ -59,30 +59,30 @@
     grid-template-areas: "back title close";
 }
 
-.floating .panel .titlebar .title {
+._comp_menupanel .panel .titlebar .title {
     font-weight: 700;
     font-size: 125%;
     margin: 0;
     padding: 20px;
 }
 
-.floating .panel .titlebar .back {
+._comp_menupanel .panel .titlebar .back {
     grid-area: back;
 }
 
-.floating .panel .titlebar .close {
+._comp_menupanel .panel .titlebar .close {
     grid-area: close;
 }
 
-.floating .panel .titlebar .hiddenBack {
+._comp_menupanel .panel .titlebar .hiddenBack {
     position: absolute;
     visibility: collapse;
 }
 
-.floating .panel .titlebar .iconButton {
+._comp_menupanel .panel .titlebar .iconButton {
     height: 64px;
 }
 
-.floating .panel .titlebar .close:hover, .floating .panel .titlebar .back:hover {
+._comp_menupanel .panel .titlebar .close:hover, ._comp_menupanel .panel .titlebar .back:hover {
     background-color: rgba(0, 0, 0, 0.2);
 }
